--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!doctype html>
 
 <html lang="en">
+
 <head>
   <meta charset="utf-8">
 
@@ -14,6 +15,37 @@
 </head>
 
 <body>
-  <h1>My Resume</h1>
+  <div class="main-wrapper">
+    <div class="nav-logo">
+      <nav class="nav">
+        <a href="#" class="nav-items">Home</a>
+        <a href="#" class="nav-items">About</a>
+        <a href="#" class="nav-items">Cat Stuff</a>
+        <a href="#" class="nav-items">Contact</a>
+      </nav>
+      <img src="img/cat-logo-wht.png" alt="">
+    </div>
+    <header class="hero">
+      <div class="quick-bio">
+        <p>
+          Lorem ipsum dolor sit amet consectetur, adipisicing elit. A nemo,
+          rerum, fugiat veritatis reiciendis similique qui facere et ab magnam
+          quaerat libero modi labore commodi, nostrum cum praesentium. Iste rem
+          itaque quis ut. Laborum temporibus rem commodi. Inventore fuga
+          assumenda error, quas nisi et, aliquid, accusamus labore eum rem
+          placeat!
+        </p>
+        <img src="img/Felix.jpg" alt="">
+      </div>
+      <h1>Felix Felicis</h1>
+    </header>
+    <section class="goals"></section>
+    <section class="skills"></section>
+    <section class="work-history"></section>
+    <footer>
+      <!-- <div>Icons made by <a href="https://www.flaticon.com/authors/freepik" title="Freepik">Freepik</a> from <a href="https://www.flaticon.com/"             title="Flaticon">www.flaticon.com</a></div> -->
+    </footer>
+  </div>
 </body>
+
 </html>
