Commit for daily form

--- a/index.html
+++ b/index.html
@@ -35,9 +35,13 @@
           assumenda error, quas nisi et, aliquid, accusamus labore eum rem
           placeat!
         </p>
-        <img src="img/Felix.jpg" alt="">
       </div>
-      <h1>Felix Felicis</h1>
+      <div class="bio-img">
+        <img class="bio-image" src="img/Felix.jpg" alt="">
+
+        <h1>Felix Felicis</h1>
+        <h2>Cat Developer</h2>
+      </div>
     </header>
     <section class="goals"></section>
     <section class="skills"></section>
