Just have to do the Media Queries

--- a/index.html
+++ b/index.html
@@ -40,13 +40,64 @@
         <img class="bio-image" src="img/Felix.jpg" alt="">
 
         <h1>Felix Felicis</h1>
-        <h2>Cat Developer</h2>
+        <h2>Mouse Behaviorist and Exterminator</h2>
       </div>
     </header>
-    <section class="goals"></section>
-    <section class="skills"></section>
-    <section class="work-history"></section>
+    <section class="goals">
+      <p>
+        I'm always looking for new and exciting projects to work on. I would love to hear from you and see what I can do for all of your mouse related endeavors. Click the button below to be taken to my email and phone number and let me know how I can help.
+      </p>
+      <a href="#email-phone">
+        <div class="button">Join the Clowder</div>
+      </a>
+    </section>
+    <section class="skills-section">
+      <div class="about-skills">
+        <h2>The Cat's Meow...</h2>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempora facere perferendis fugiat qui fugit consequuntur doloribus, odit tenetur adipisci exercitationem nihil? Consequatur commodi hic, maiores reprehenderit ratione id fuga delectus.</p>
+      </div>
+      <div class="skills">
+        <h2>My Skills</h2>
+        <div class="flex-list">
+          <ul>
+            <li>Sitting on keyboards</li><img src="img/mouse.png" alt=""><img src="img/mouse.png" alt=""><br>
+            <li>Knocking stuff off counters</li><img src="img/mouse.png" alt=""><br>
+            <li>Napping</li><img src="img/mouse.png" alt=""><img src="img/mouse.png" alt=""><img src="img/mouse.png"
+              alt=""><br>
+            <li>Generally causing trouble</li><img src="img/mouse.png" alt=""><img src="img/mouse.png" alt="">
+          </ul>
+        </div>
+      </div>
+    </section>
+    <section class="work-history">
+      <h2>Work History</h2>
+      <table>
+        <tr>
+          <th>Year</th>
+          <th>Company</th>
+          <th>Job Title</th>
+        </tr>
+        <tr>
+          <td>2016 - 2018</td>
+          <td>City of New York</td>
+          <td>Mouse Disposal Expert</td>
+        </tr>
+        <tr>
+          <td>2013 - 2016</td>
+          <td>Walt Disney World</td>
+          <td>Mouse Behaviorist</td>
+        </tr>
+        <tr>
+          <td>2010 - 2013</td>
+          <td>PetSmart</td>
+          <td>Mouse Wrangler</td>
+        </tr>
+      </table>
+    </section>
     <footer>
+
+      <p>&copy; 2019 Robert Stepanov</p>
+      <p id="email-phone">Email: thecatsmeow@gmail.com --- (555) 555-5555</p>
       <!-- <div>Icons made by <a href="https://www.flaticon.com/authors/freepik" title="Freepik">Freepik</a> from <a href="https://www.flaticon.com/"             title="Flaticon">www.flaticon.com</a></div> -->
     </footer>
   </div>
