--- a/index.html
+++ b/index.html
@@ -45,7 +45,9 @@
     </header>
     <section class="goals">
       <p>
-        I'm always looking for new and exciting projects to work on. I would love to hear from you and see what I can do for all of your mouse related endeavors. Click the button below to be taken to my email and phone number and let me know how I can help.
+        I'm always looking for new and exciting projects to work on. I would love to hear from you and see what I can do
+        for all of your mouse related endeavors. Click the button below to be taken to my email and phone number and let
+        me know how I can help.
       </p>
       <a href="#email-phone">
         <div class="button">Join the Clowder</div>
@@ -54,7 +56,9 @@
     <section class="skills-section">
       <div class="about-skills">
         <h2>The Cat's Meow...</h2>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempora facere perferendis fugiat qui fugit consequuntur doloribus, odit tenetur adipisci exercitationem nihil? Consequatur commodi hic, maiores reprehenderit ratione id fuga delectus.</p>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempora facere perferendis fugiat qui fugit
+          consequuntur doloribus, odit tenetur adipisci exercitationem nihil? Consequatur commodi hic, maiores
+          reprehenderit ratione id fuga delectus.</p>
       </div>
       <div class="skills">
         <h2>My Skills</h2>
